# MegaSchool-Coding-Agents

./: .dockerignore  .gitignore  DEMO.md  Dockerfile  GUIDE.md  README.md  REPORT.md  create_demo_issue.py  create_experiment_2.py  create_final_demo.py  create_release.py  create_verify_issue.py  demo_agent.py  deploy_yandex.sh  docker-compose.yml  events.db  pyproject.toml  run_final_demo.py
.github/workflows/: ci_fix.yml  ci_review.yml  on_issue.yml
docs/: github_app_setup.md  yandex_cloud.md
experiments/: benchmark.py  verify_context.py
src/: app.py  main.py  math_utils.py  validators.py
src/agents/: code_agent.py  reviewer_agent.py
src/algo/: fibonacci.py  matrix.py
src/core/: auto_setup.py  config.py  db.py  git_provider.py  github_app_auth.py  llm.py  repo_scanner.py  runner.py  utils.py  webhook_handler.py
src/templates/: dashboard.html
src/utils/: logger.py  string_tools.py
tests/: test_placeholder.py  test_repo_scanner.py  verify_llm_structure.py
