[tool.poetry]
name = "coding-agents"
version = "0.1.0"
description = "AI Agents for GitHub SDLC Automation"
authors = ["Admin <admin@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

# Forced update for CI hash
[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
GitPython = "^3.1.40"
PyGithub = "^2.1.1"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pyjwt = "^2.10.1"
cryptography = "^46.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.0"
bandit = "^1.7.5"
black = "^24.0"
mypy = "^1.8"
tenacity = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"
strict = true
